# edaw

./: .gitignore  Cargo.toml
audio_engine/: Cargo.toml
audio_engine/src/: audio_channel.rs  engine.rs  ffi.rs  lib.rs  midi_channel.rs  reload.rs
audio_engine/src/audio_channel/: audio_rx.rs  audio_tx.rs
audio_engine/src/engine/: connection.rs  engine_host.rs  midi_parser.rs  sampler.rs  state.rs  updater.rs
audio_engine/src/engine/connection/: connection_manager.rs
audio_engine/src/engine/sampler/: sample.rs  sample_id.rs
audio_engine/src/engine/state/: atomic_state.rs
audio_engine/src/engine/updater/: update_manager.rs
audio_engine/src/midi_channel/: midi_packet.rs  midi_packet_buffer.rs  midi_rx.rs  midi_tx.rs
audio_engine_run/: Cargo.toml
audio_engine_run/src/: .audio_io.rs.rustfmt  audio_io.rs  main.rs  midi_io.rs
edaw_messaging/: Cargo.toml
edaw_messaging/src/: lib.rs  messaging.rs
edaw_messaging/src/messaging/: message_queue.rs  packet_types.rs
edaw_messaging/src/messaging/message_queue/: message_rx.rs  message_tx.rs
edaw_messaging/src/messaging/packet_types/: ping.rs
edaw_sampler/: Cargo.toml
edaw_sampler/src/: lib.rs  sampler.rs
edaw_sampler/src/sampler/: sample.rs  sample_channel.rs  sample_id.rs  sample_loader.rs
edaw_sampler/src/sampler/sample_id/: note.rs  round_robin.rs  velocity.rs
edaw_sampler/src/sampler/sample_loader/: load_task.rs
terminal/: Cargo.toml
terminal/src/: ffi.rs  lib.rs  reload.rs  terminal.rs  tui.rs
terminal/src/tui/: app.rs
terminal_run/: Cargo.toml
terminal_run/src/: main.rs
(+10 files in other folders)
