[package]
name = "audio_engine"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib", "dylib"]

[dependencies]
ringbuf = "0.3"
anyhow = "1.0"
mio = { version = "0.8.11", features = ["os-poll", "net"] }
fxhash = "0.2"
edaw_messaging = { path = "../edaw_messaging" }
edaw_sampler = { path = "../edaw_sampler" }
crossbeam-channel = "0.5"
