[package]
name = "audio_engine_run"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hot-lib-reloader = "^0.6"
audio_engine = { path = "../audio_engine" } 
anyhow = "1.0"
cpal = { version = "0.15", features = ["jack"] }
ringbuf = "0.3"
